# TD_

./: LICENSE  README.md
CHOPs/: Linear_Interpolation.tox
CHOPs/Multi Generators/: Interpolator_Simple.tox  Interpolator_nonLinear.tox  Step_Generator.tox  multi_Noise.tox  multi_Pattern.tox
CHOPs/misc Processors/: Smooth_Min_Max.tox
COMPs/Network/: COMP_Snapshot.tox  Utility_Muter.tox  Utility_Solo.tox
Plugins/Apple/Depth Anything v2/: AppleDepth.h  AppleDepth.mm  CMakeLists.txt  Info.plist
Plugins/Apple/Foreground Mask/: AppleForegroundMask.h  AppleForegroundMask.mm  CMakeLists.txt  Info.plist
Plugins/Apple/Instance Mask/: AppleInstanceMask.h  AppleInstanceMask.mm  CMakeLists.txt  Info.plist
Plugins/Apple/Saliency Map/: AppleSaliencyMap.h  AppleSaliencyMap.mm  CMakeLists.txt  Info.plist
Plugins/Apple/Subject Mask/: AppleSubjectMask.h  AppleSubjectMask.mm  CMakeLists.txt  Info.plist
Plugins/Apple/Super Resolution/: AppleSuperResolution.h  AppleSuperResolution.mm  CMakeLists.txt  Info.plist
Plugins/TOPs/SeamCarving/: CMakeLists.txt  Parameters.cpp  Parameters.h  SeamCarving.cpp  SeamCarving.h
SOPs/: Export_SVG.tox  Pill.tox  SVG_Network_Manager.tox
SOPs/SVG/: Cheat_Sheet.tox  Export_SVG.tox  Export_SVG_new.tox  SVG_Network_Manager.tox  SVG_Out.tox  SVG_in.tox
SOPs/Shapes/: Pill.tox  sparkle.tox
SOPs/Typography/: Variable_Font_in.tox
TOPs/Advanced Detectors/: Eigenvalues.tox  Eigenvectors.tox  Harris_Detector.tox  Hessian_Detector.tox
TOPs/Advanced Feature Detectors/: Eigen_Values.tox  Eigenvalues.tox  Eigenvectors.tox  Harris_Detector.tox
TOPs/Binning/: Binning.tox  Pixel_Binning.tox
TOPs/Bitwise/: Bitshift.tox  Local_Binary_Pattern.tox  Logic.tox  NOT.tox
TOPs/Blurring/: BiLateral_Blur.tox  Directional_Blur.tox  Gamma_Corrected_Blur.tox  Slope_Align_Blur.tox  Slope_Aligned_Blur.tox  sCurve_Blur.tox
TOPs/Color/: ASE_in.tox  CMYK_in.tox  HEX_in.tox
TOPs/Color Converters/: CMYK_to_RGB.tox  HEX_to_RGB.tox  RGB_to____.tox  ____to_RGB.tox  sRGB_Linear.tox
TOPs/Convolvers/: Gradient.tox  Haar_Standard.tox  Haar_Steerable.tox  Kirsch_Compass.tox  Kirsch_Compass_Steerable.tox  Kirsch_Operator.tox  Laplacian_Standard.tox  Laplacian_Superior.tox  Line_Detector.tox  Line_Detector_Steerable.tox  Prewitt_Standard.tox  Prewitt_Steerable.tox  Roberts_Cross_Standard.tox  Roberts_Cross_Steerable.tox  Sobel_Simple.tox  Sobel_Standard.tox  Sobel_Steerable.tox  Sobel_Superior.tox
TOPs/Dithering/: Bayer_Matrix_Dither.tox  Error_Diffusion_Dither.tox  Floyd_Steinberg_Dither.tox  IGN_Dither.tox  Noise_Dither.tox
TOPs/Edge Detectors/: 1D_Laplacian_Operator.tox  1D_Laplacian_Operator_Steerable.tox  Binary_Outliner.tox  Canny.tox  Farid_Simoncelli.tox  Gradient.tox  Gradient_Color.tox  Gradient_Complex.tox  Haar_Operator.tox  Haar_Operator_Steerable.tox  Haar_Standard.tox  Haar_Steerable.tox  Harris_Detector.tox  Hessian_Detector.tox  Kirsch_Compass.tox  Kirsch_Compass_Steerable.tox  Kirsch_Operator.tox  Kirsch_Operator_Steerable.tox  Krisch_Operator.tox  Laplacian_1D.tox  Laplacian_1D_Operator.tox  Laplacian_1D_Steerable.tox  Laplacian_Operator.tox  Laplacian_Standard.tox  Laplacian_Superior.tox  Line_Detection.tox  Line_Detection_Steerable.tox  Line_Detector.tox  Line_Detector_Steerable.tox  Prewitt_Operator.tox  Prewitt_Operator_Steerable.tox  Prewitt_Standard.tox  Prewitt_Steerable.tox  Roberts_Cross.tox  Roberts_Cross_Standard.tox  Roberts_Cross_Steerable.tox  Sobel_Dynamic.tox  Sobel_Operator.tox  Sobel_Operator_Dynamic.tox  Sobel_Operator_Steerable.tox  (+4 more)
TOPs/Fourier Transform/: FFT_Hi_Lo_Band_Pass_Color.tox  FFT_Hi_Lo_Band_Pass_Monochrome.tox  FFT_Hi_Lo_Pass.tox  FFT_Hi_Lo_Pass_Color.tox
TOPs/Fourier Transforms/: FFT_Decomposition.tox  FFT_Hi_Lo_Band_Pass_Color.tox  FFT_Hi_Lo_Band_Pass_Monochrome.tox  iFFT_Recomposition.tox
TOPs/Histogram/: CDF_Conversion.tox  Histogram.tox  Histogram_Conversion.tox  Histogram_Distance.tox  Histogram_Equalization.tox  Histogram_Matching.tox  Histogram_Normalizer.tox  Histogram_Similarity.tox  Histogram_deCompiler.tox  Histogram_reCompiler.tox
TOPs/Image Analysis/: Average.tox  Average_Global.tox  Average_Local.tox  Colormap.tox  Detail_Metric.tox  Detail_Metric_Global.tox  Detail_Metric_Local.tox  Gradient_Analysis.tox  Local_Analysis.tox  Local_Average.tox  Local_Binary_Pattern.tox  Local_Detail_Metric.tox  Local_Variability.tox  Masked_Analysis.tox  Orientation_Aware_nonMaximum_Suppression.tox  RGB_max.tox  Root_Mean_Square.tox  Sharpness_Metric.tox  Solar_Curve.tox  Specific_Filter.tox  Standard_Deviation.tox  Variability.tox  Variability_Global.tox  Variability_Local.tox  Varience.tox  Varience_Global.tox  nonMinMax_Suppression.tox
TOPs/Mapping/: Hex_Grid.tox  UVW_map.tox  UV_Corrector.tox  UV_Inverse_Map.tox  UV_Inversion.tox  UV_Map.tox  UV_Transform.tox  UV_map.tox  UV_to_Hex_Grid.tox
TOPs/Morphological/: Binary_Outliner.tox  Dilate_Erode.tox  Dynamic_Dilate_Erode.tox  Feature_Detection.tox  Feature_Detector.tox  Geodesic_Dilate_Erode.tox  Gradient.tox  Hit_or_Miss.tox  Morphological_Blur.tox  Nearest_Neighbor.tox  Opening_Closing.tox  Perimeter.tox  Pruning.tox  Smoothing.tox  Thinning_Thickening.tox  Top_Bottom_Hat.tox
TOPs/Noise/: Blue_Noise.tox  Value_Noise.tox  Voronoi.tox  White_Noise.tox
TOPs/Normal Mapping/: Normal_Combine.tox  Normal_Map.tox  Normal_Normalization.tox  Normal_Rotate.tox  Normal_Strength.tox
TOPs/Normalizers/: Normalize_Circlular_Curve.tox  Normalize_Exponential_Curve.tox  Normalize_RGB.tox  Normalize_RGB_HSV.tox  Normalize_S_Curve.tox  Normalize_S_Curve_Maintain_0s.tox  Normalize_S_Curve_Maintain_Zeros.tox  Normalize_S_Curve_Maintain_Zeros_old.tox  Normalize_S_Curve_simple.tox  Normalize_Tunable_Sigmoid_Function.tox  Normalize_to_average.tox  Normalize_to_sum.tox  Sigmoid.tox  Sigmoid_Custom.tox  Sigmoid_Focal_Point_Double.tox  Sigmoid_Focal_Point_Single.tox  Sigmoid_RGB.tox  Sigmoid_RGB_maintain_1s.tox  Sigmoid_Tunable.tox  Soft_min_max.tox  Soft_plus_minus.tox
TOPs/Photoshop/: Blend_If.tox  Blend_Mode.tox  Blending_Mode.tox  Dissolve.tox
TOPs/Print/: CMYK_Out.tox  (+3 more)
(+195 files in other folders)
